--- a/index.html
+++ b/index.html
@@ -1399,7 +1399,7 @@
                 <p><i class="fas fa-map-marker-alt"></i> Nandurbar, Maharashtra, India</p>
                 <p><i class="fas fa-phone"></i> +91 9423493789</p>
                 <p><i class="fas fa-envelope"></i> rajeshramraje@gmail.com</p>
-                <p><i class="fas fa-globe"></i> www.ardf.org</p>
+                <p><i class="fas fa-globe"></i> https://www.ardfngo.org</p>
             </div>
         </div>
         <div class="footer-bottom">
